# rocketchat-webhook-proxy

./: Makefile  README.rst  pyproject.toml
docker/: Dockerfile
src/rocketchat_webhook_proxy/: app.py
tests/: test_rocketchat_webhook_proxy.py
