[tool.poetry]
name = "rocketchat-webhook-proxy"
version = "0.1.0"
description = ""
authors = ["Ulrich Petri <ulo@ulo.pe>"]

[tool.poetry.dependencies]
python = "^3.7"
asks = "=2.2.0"
quart = "^0.8.1"
trio = "^0.11.0"
quart-trio = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
py36 = true
line-length = 99

