[tool.poetry]
name = "rocketchat-webhook-proxy"
version = "0.1.0"
description = ""
authors = ["Ulrich Petri <ulo@ulo.pe>"]

[tool.poetry.dependencies]
python = "^3.7"
asks = "^2.0.0"
quart = "^0.9.0"
trio = "^0.11.0"
quart-trio = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^4.0"
black = {version = "^19.3-beta.0",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
py36 = true
line-length = 99

